# cpp-cli

./: CMakeLists.txt  Doxyfile  README.md  annotated.html  annotated_dup.js  arch.html  classCppCLI_1_1CLI-members.html  classCppCLI_1_1CLI.html  classCppCLI_1_1CLI.js  classCppCLI_1_1ConsoleIO-members.html  classCppCLI_1_1ConsoleIO.html  classCppCLI_1_1ConsoleIO.js  classCppCLI_1_1ConsoleIO__inherit__graph.dot  classCppCLI_1_1Helper-members.html  classCppCLI_1_1Helper.html  classCppCLI_1_1Helper.js  classCppCLI_1_1Helper__inherit__graph.dot  classCppCLI_1_1IO-members.html  classCppCLI_1_1IO.html  classCppCLI_1_1IO.js  classCppCLI_1_1IO__inherit__graph.dot  classCppCLI_1_1Interpretation-members.html  classCppCLI_1_1Interpretation.html  classCppCLI_1_1Interpretation.js  classCppCLI_1_1Interpreter-members.html  classCppCLI_1_1Interpreter.html  classCppCLI_1_1StdHelper-members.html  classCppCLI_1_1StdHelper.html  classCppCLI_1_1StdHelper.js  classCppCLI_1_1StdHelper__coll__graph.dot  classCppCLI_1_1Subcommand-members.html  classCppCLI_1_1Subcommand.html  classCppCLI_1_1Subcommand.js  classCppCLI_1_1Value-members.html  classCppCLI_1_1Value.html  classCppCLI_1_1Value.js  classes.html  cli_8hpp_source.html  cmake-find-package.html  concepts.html  (+79 more)
.github/workflows/: doxygen.yml
cmake/: cpp-cli-config.cmake
docs/: index.md
docs/concepts/: arch.md  concepts.md  helpers.md  subcommand-structure.md
docs/dev/: dev.md  testing.md
docs/install/: cmake-find-package.md  install-in-repo.md  install-submodule.md  install.md  prerequisites.md
docs/install/parts/: build-with-cmake.md  setup-submodule.md  test-integration.md
docs/tutorials/: first-app.md  options.md  subcommands.md  tutorials.md
include/cpp-cli/: cpp-cli.hpp
include/cpp-cli/contracts/: console-io.hpp  helper.hpp
include/cpp-cli/misc/: enums.hpp  structs.hpp
include/cpp-cli/services/: cli.hpp  interpreter.hpp  io.hpp
include/cpp-cli/utilities/: interpretation.hpp  std-helper.hpp  subcommand.hpp  value.hpp
lib/: CMakeLists.txt
lib/src/services/: cli.cpp  interpreter.cpp  io.cpp
lib/src/utilities/: interpretation.cpp  std-helper.cpp  subcommand.cpp  value.cpp
samples/: CMakeLists.txt
samples/src/: hello-world.cpp  sample.cpp  subcommand-tree.cpp
search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  pages_0.js  (+19 more)
tests/: CMakeLists.txt  main.cpp
tests/cases/: bool-cast-test.cpp  default-values-test.cpp  interpretation-test.cpp  non-existing-options.cpp  option-type-validation-test.cpp  required-values-test.cpp  subcmd-tree-test.cpp  universal-command-test.cpp
tests/src/: base-test.cpp  base-test.hpp  test-emitter.cpp  test-emitter.hpp  test-tools.cpp  test-tools.hpp
